colony worker request score